Fix a link to Resource Pool in Terminology

--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -81,7 +81,7 @@ See [networks](networks.html) for more details.
 - [See vCloud CPI network cloud properties](vcloud-cpi.html#networks)
 
 ---
-## <a id='resource-pools'></a>Resource Pools Block
+## <a id='resource-pool'></a>Resource Pools Block
 
 **resource_pools** [Array, required]: Specifies the [resource pools](./terminology.html#resource-pools) a deployment uses. A deployment manifest can describe multiple resource pools and uses unique names to identify and reference them.
 
