Fix a link to Resource Pool in Terminology

--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -83,7 +83,7 @@ See [networks](networks.html) for more details.
 ---
 ## <a id='resource-pools'></a>Resource Pools Block
 
-**resource_pools** [Array, required]: Specifies the [resource pools](./terminology.html#resource-pools) a deployment uses. A deployment manifest can describe multiple resource pools and uses unique names to identify and reference them.
+**resource_pools** [Array, required]: Specifies the [resource pools](./terminology.html#resource-pool) a deployment uses. A deployment manifest can describe multiple resource pools and uses unique names to identify and reference them.
 
 * **name** [String, required]: A unique name used to identify and reference the resource pool
 * **network** [String, required]: References a valid network name defined in the Networks block. Newly created resource pool VMs use the described configuration.
