add basic azure instructions

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -24,6 +24,7 @@ title: Index
 * [Install BOSH CLI](bosh-cli.html)
 * [Bootstrap an environment](init.html)
     * [On AWS](init-aws.html)
+    * [On Azure](init-azure.html)
     * [On OpenStack](init-openstack.html)
     * [On vSphere](init-vsphere.html)
     * [On vCloud](init-vcloud.html)
@@ -69,13 +70,14 @@ title: Index
     * [Using IAM instance profiles](aws-iam-instance-profiles.html)
     * [Using instance storage](aws-instance-storage.html)
     * [Creating IAM users](aws-iam-users.html)
+* [Azure](azure-cpi.html)
+    * [Creating resources](azure-resources.html)
 * [OpenStack](openstack-cpi.html)
     * [Using Keystone v3 API](openstack-keystonev3.html)
     * [Extended Registry configuration](openstack-registry.html)
 * [vSphere](vsphere-cpi.html)
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
 * [vCloud](vcloud-cpi.html)
-* [Azure](azure-cpi.html) **[beta]**
 * [Warden/Garden](warden-cpi.html)
 
 ### <a id="hm"></a> Health management of VMs and processes
