--- a/azure-cpi.html.md.erb
+++ b/azure-cpi.html.md.erb
@@ -4,12 +4,16 @@ title: Azure CPI
 
 This topic describes cloud properties for different resources created by the Azure CPI.
 
-## <a id='networks'></a> Networks
+## <a id="networks"></a> Networks
 
 Schema for `cloud_properties` section used by dynamic network or manual network subnet:
 
 * **virtual\_network\_name** [String, required]: Name of a virtual network. Example: `boshnet`.
 * **subnet_name** [String, required]: Name of a subnet within virtual network.
+* **tcp_endpoints** [Array, optional]: Array of port pairs. Only used with vip networks to expose specific ports.
+* **udp_endpoints** [Array, optional]: Array of port pairs. Only used with vip networks to expose specific ports.
+
+See [how to create a virtual network and subnets](azure-resources.html#virtual-network).
 
 Example of manual network:
 
@@ -25,18 +29,35 @@ networks:
       subnet_name: boshsub
 ```
 
+See [how to create public IP](azure-resources.html#public-ips) to use with vip networks.
+
+Example of vip network:
+
+```yaml
+networks:
+- name: public
+  type: vip
+  cloud_properties:
+    tcp_endpoints:
+    - "22:22"
+    - "80:80"
+    udp_endpoints:
+    - "68:68"
+```
+
 ---
-## <a id='resource-pools'></a> Resource Pools
+## <a id="resource-pools"></a> Resource Pools
 
 Schema for `cloud_properties` section:
 
 * **instance_type** [String, required]: Type of the [instance](https://azure.microsoft.com/en-us/pricing/details/virtual-machines/#Linux). Example: `Standard_A2`.
-* **storage\_account\_name** [String, optional]: Storage account for VMs. If this is not set, the VMs will be created in the default storage account. If you use a different storage account which must be in the same resource group, please make sure:
-    1. the permissions for the container 'stemcell' in the default storage account is set to Public read access for blobs only.
+* **storage\_account\_name** [String, optional]: Storage account for VMs. If this is not set, the VMs will be created in the default storage account. See [this document](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/get-started/deploy-cloudfoundry-for-enterprise.md#multiple-storage-accounts) for more details on why this option exists. If you use a different storage account which must be in the same resource group, please make sure:
+    1. the permissions for the container 'stemcell' in the default storage account is set to 'Public read access for blobs only'.
     1. a table 'stemcells' is created in the default storage account.
     1. two containers 'bosh' and 'stemcell' are created in the new storage account.
     If you use DS-series or GS-series as instance_type, you should set this to a premium storage account.
     See more information about [Azure premium storage](https://azure.microsoft.com/en-us/documentation/articles/storage-premium-storage-preview-portal/). See [avaliable regions](http://azure.microsoft.com/en-us/regions/#services) where you can create premium storage accounts.
+* **availability_set** [String, optional]: Name of an availability set to use for VMs. If available set does not exist, it will be automatically created. [More details](https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/get-started/deploy-cloudfoundry-for-enterprise.md#availability-set).
 
 Example of a `Standard_A2` instance:
 
@@ -52,7 +73,7 @@ resource_pools:
 ```
 
 ---
-## <a id='disk-pools'></a> Disk Pools
+## <a id="disk-pools"></a> Disk Pools
 
 Currently the CPI does not support any cloud properties for networks.
 
@@ -65,7 +86,7 @@ disk_pools:
 ```
 
 ---
-## <a id='global'></a> Global Configuration
+## <a id="global"></a> Global Configuration
 
 The CPI can only use single resource group.
 
@@ -73,15 +94,17 @@ Schema:
 
 * **environment** [String, required]: Azure environment name. Possible values are: `AzureCloud` and `AzureChinaCloud`.
 * **subscription_id** [String, required]: Subscription ID.
-* **storage\_account\_name** [String, required]: Storage account name. It will be used as a default storage account for VM disks and stemcells.
-* **resource\_group\_name** [String, required]: Resource group name.
 * **tenant_id** [String, required]: Tenant ID of the service principal.
 * **client_id** [String, required]: Client ID of the service principal.
 * **client_secret** [String, required]: Client secret of the service principal.
+* **resource\_group\_name** [String, required]: Resource group name.
+* **storage\_account\_name** [String, required]: Storage account name. It will be used as a default storage account for VM disks and stemcells.
 * **ssh_user** [String, required]: SSH username. Default: `vcap`.
 * **ssh_certificate** [String, required]: SSH certificate.
 
 See [all configuration options](https://bosh.io/jobs/cpi?source=github.com/cloudfoundry-incubator/bosh-azure-cpi-release).
+
+See [Creating Azure resources](azure-resources.html) page for more details on how to create and configure above resources.
 
 Example with hard-coded credentials:
 
@@ -90,12 +113,12 @@ properties:
   azure: &azure
     environment: AzureCloud
     subscription_id: 3c39a033-c306-4615-a4cb-260418d63879
-    storage_account_name: boshstore
-    storage_access_key: "+o9EVnno8ja5OzQim6...fQkVGbvoQmazl+Nlg=="
-    resource_group_name: bosh-res-group
     tenant_id: 0412d4fa-43d2-414b-b392-25d5ca46561da
     client_id: 33e56099-0bde-8z93-a005-89c0f6df7465
-    client_secret: sp-password
+    client_secret: client-secret
+    resource_group_name: bosh-res-group
+    storage_account_name: boshstore
+    storage_access_key: "+o9EVnno8ja5OzQim6...fQkVGbvoQmazl+Nlg=="
     ssh_user: vcap
     ssh_certificate: |
       -----BEGIN CERTIFICATE-----
@@ -104,6 +127,42 @@ properties:
       QAoeQbGmV50ZQk/VsgmFMBoFXntIs5EKkjO6fL4MsD9QtSkiHMkqwIQ20+NNqp3j
       -----END CERTIFICATE-----
 ```
+
+---
+## <a id="errors"></a> Errors
+
+```
+http_get_response - get_token - http error: 400
+```
+
+Service principal is most likely invalid. Verify that client ID, client secret and tenant ID successfully work:
+
+<pre class="terminal">
+$ azure login --username client-id --password client-secret --service-principal --tenant tenant-id
+</pre>
+
+```
+http_put - error: 409 message: {
+  "error": {
+    "code": "OperationNotAllowed",
+    "message": "Operation results in exceeding quota limits of Core. Maximum allowed: 4, Current in use: 4, Additional requested: 1."
+  }
+}
+```
+
+Either upgrade your trial account, or file a support ticket in the Azure portal to raise account quotas.
+
+```
+http_delete - error: 400 message: {
+    "error": {
+        "code": "NicInUse",
+        "message": "Network Interface /.../networkInterfaces/dc0d3a9a-0b00-40d8-830d-41e6f4ac9809 is used by existing VM /.../virtualMachines/dc0d3a9a-0b00-40d8-830d-41e6f4ac9809.",
+        "details": []
+    }
+}
+```
+
+This error indicates that unknown VM (to the Director) took up the IP that the Director is trying to assign to a new VM. Either let the Director know to not use this IP by including it in the reserved section of a subnet in your manual network, or make that IP available by terminating the unknown VM.
 
 ---
 [Back to Table of Contents](index.html#cpi-config)
