Remove remainders of microbosh

--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -160,7 +160,7 @@ cloud_provider:
 ---
 ## <a id="prepare-openstack"></a>Step 2: Prepare an OpenStack environment
 
-To prepare your OpenStack project for deploying MicroBOSH, use the OpenStack GUI to perform the following tasks:
+To prepare your OpenStack project for deploying BOSH, use the OpenStack GUI to perform the following tasks:
 
 * Verify [Prerequisites](#prerequisites)
 * Create a [Keypair](#keypair).
@@ -205,7 +205,7 @@ To prepare your OpenStack project for deploying MicroBOSH, use the OpenStack GUI
 
 1. Click **Create Keypair**.
 
-1. Name the Keypair "microbosh" and click **Create Keypair**.
+1. Name the Keypair "bosh" and click **Create Keypair**.
 
     <%= image_tag("images/micro-openstack/create-keypair.png") %>
 
