Fix a minor grammar error

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -340,7 +340,7 @@ dependencies together in a single package, though that is not recommended.
 
 ### <a id="update-pkging-specs"></a> Update packaging specs ###
 
-Within each package directory is a `spec` file which states:
+Within each package directory, there is a `spec` file which states:
 
 * The package name
 * The package's dependencies
