Fix link to OpenStack cpi job

--- a/openstack-cpi.html.md.erb
+++ b/openstack-cpi.html.md.erb
@@ -105,7 +105,7 @@ disk_pools:
 ---
 ## <a id='global'></a> Global Configuration
 
-See [CPI job configuration](https://bosh.io/jobs/cpi?source=github.com/cloudfoundry-incubator/bosh-openstack-cpi-release) for details.
+See [CPI job configuration](https://bosh.io/jobs/openstack_cpi?source=github.com/cloudfoundry-incubator/bosh-openstack-cpi-release) for details.
 
 Example with Keystone V2:
 
