--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -57,12 +57,15 @@ title: Index
 
 ### <a id="deployment-config"></a> Detailed deployment configuration
 
-* Deployment Jobs
+* [Cloud config](cloud-config.html)
 * Resource Pools
     * [VM anti-affinity](vm-anti-affinity.html)
 * [Networks](networks.html)
-* [Persistent disks](persistent-disks.html)
+* [Runtime config](runtime-config.html)
 * [Trusted certificates](trusted-certs.html)
+* Deployment Jobs
+    * [Renaming/migrating jobs](migrated-from.html)
+* [Persistent and orphaned disks](persistent-disks.html)
 
 ### <a id="cpi-config"></a> Detailed CPI configuration & troubleshooting
 
@@ -110,6 +113,7 @@ title: Index
     * Job properties
     * [Job lifecycle](job-lifecycle.html)
         * [Pre-start script](pre-start.html)
+        * [Post-start script](post-start.html)
         * [Drain script](drain.html)
 * What is a package?
     * [Creating a package](packages.html)
