--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,6 +2,8 @@
 title: Index
 ---
 
+<p class="note">See <a href="recent.html">Recent Additions and Updates</a>.</p>
+
 ## <a id="intro"></a> Introduction
 
 * [What is BOSH?](about.html)
@@ -58,10 +60,12 @@ title: Index
 ### <a id="deployment-config"></a> Detailed deployment configuration
 
 * [Cloud config](cloud-config.html)
+    * [AZs](azs.html)
+    * [Networks](networks.html)
 * Resource Pools
     * [VM anti-affinity](vm-anti-affinity.html)
-* [Networks](networks.html)
 * [Runtime config](runtime-config.html)
+    * [Addons](runtime-config.html#addons)
 * [Trusted certificates](trusted-certs.html)
 * Deployment Jobs
     * [Renaming/migrating jobs](migrated-from.html)
@@ -107,21 +111,20 @@ title: Index
     * [Creating a release](create-release.html)
     * Testing with dev releases
     * Cutting final releases
-        * Versioning of releases
-* What is a job?
+    * [Compiled releases](compiled-releases.html)
+* [What is a job?](jobs.html)
     * Creating a job
-    * Job properties
     * [Job lifecycle](job-lifecycle.html)
         * [Pre-start script](pre-start.html)
         * [Post-start script](post-start.html)
+        * [Post-deploy script](post-deploy.html)
         * [Drain script](drain.html)
 * What is a package?
     * [Creating a package](packages.html)
     * Relationship to release blobs
 * How do releases, jobs, and packages interact?
 * Managing release repository
-    * Release blobstore
-        * [Configuring S3 release blobstore](s3-release-blobstore.html)
+    * [Configuring S3 release blobstore](s3-release-blobstore.html)
 
 ---
 ## <a id="extend"></a> Extending BOSH
