--- a/terminology.html.md.erb
+++ b/terminology.html.md.erb
@@ -2,9 +2,13 @@
 title: Terminology
 ---
 
+## <a id="az"></a> AZ or Availaibility Zone
+
+An availability zone represents a separated set of cloud resources (typically compute, networking and storage) such that failures in one AZ cause minimal impact in a different AZ. [See usage details](azs.html).
+
 ## <a id="addon"></a> Addon
 
-A release job that is colocated on all VMs managed by the Director. Addons are configured in the runtime config.
+A release job that is colocated on all VMs managed by the Director. Addons are configured in the runtime config. [See usage details](runtime-config.html).
 
 ## <a id="agent"></a> Agent
 
@@ -14,21 +18,29 @@ A process that runs continuously on each VM that BOSH deploys (one Agent process
 
 bosh-init is tool used for creating and updating the Director (its VM and persistent disk) in an environment.
 
-## <a id="canary"></a> Canary
+## <a id="canary"></a> Canary (Instance)
 
-Canary instances are instances updated before other instances. Any update error in a canary instance causes the deployment to stop. Since only canaries are affected before an update stops, problem packages or jobs are prevented from taking over all job instances.
+Canary instances are first instances updated within an instance group. Any update error in a canary instance causes the deployment to stop. Since only canaries are affected before an update stops, problem jobs and packages are prevented from taking over all instances.
 
 ## <a id="cli"></a> CLI
 
 The BOSH Command Line Interface (CLI) is what you use to run BOSH commands. You must [install](./bosh-cli.html) the CLI to use BOSH. Run `bosh help --all` to view the help.
 
+## <a id="cloud"></a> Cloud
+
+Same as Infrastructure as a Service.
+
 ## <a id="cloud-config"></a> Cloud Config
 
-The cloud config is a YAML file that defines IaaS specific configuration used by the Director and all deployments. It allows to separate IaaS specific configuration into its own file and keep deployment manifests IaaS agnostic.
+The cloud config is a YAML file that defines IaaS specific configuration used by the Director and all deployments. It allows to separate IaaS specific configuration into its own file and keep deployment manifests IaaS agnostic. [See usage details](cloud-config.html).
+
+## <a id="compiled-release"></a> Compiled Release
+
+A compiled release contains jobs and compiled packages. A non-compiled release (or just release) contains jobs and source packages. [See usage details](compiled-releases.html).
 
 ## <a id="cpi"></a> CPI
 
-A Cloud Provider Interface is a software layer between the Director and an IaaS (cloud).
+A Cloud Provider Interface is an abstraction layer between the Director and an IaaS (cloud). CPIs have to implement a small number of methods to perform VM, disk and network operations. CPIs could be written in different languages.
 
 ## <a id="deploy"></a> Deploy
 
@@ -48,15 +60,15 @@ A repository where BOSH stores release artifacts, logs, stemcells, and other con
 
 ## <a id="director-task"></a> Director Task
 
-The basic unit of work performed by the Director. You can get the status and logs for any task. You can monitor the task throughout its lifecycle, which progresses through states like started, running, done, and error.
+The basic unit of work performed by the Director. You can get the status and logs for any task. You can monitor the task throughout its lifecycle, which progresses through states like queued, processing, done, and error.
 
-## <a id="director-vm"></a> Director VM (aka MicroBOSH)
+## <a id="director-vm"></a> <a id="microbosh"></a> Director VM (previously known as MicroBOSH)
 
 A single VM with the Director and other necessary components.
 
-## <a id="disk-pools"></a> Disk Pools
+## <a id="disk-type"></a> <a id="disk-pool"></a> Disk Type (previously known as Disk Pool)
 
-Disk pools are logical collections of disks, in a deployment, each created with the same configuration.
+Disk type is a named disk configuration specified in the cloud config. [See usage details](cloud-config.html#disk-types) and [read more about persistent disks](persistent-disks.html).
 
 ## <a id="environment"></a> Environment
 
@@ -74,9 +86,17 @@ An errand is a short-lived job that an operator can run multiple times after the
 
 Short for Infrastructure as a Service. BOSH enables the Cloud Foundry PaaS and other software deployed with BOSH to support multiple IaaS providers.
 
-## <a id="job"></a> Job
+## <a id="instance"></a> Instance
 
-A job is a composition of configuration and installed software on a VM. Each job specified names the VM types and job templates used to create the VMs. A job template is part of a release and populates VMs with packages, configuration files, and control scripts that tell the Agent what runs on the VM.
+An instance corresponds to a single VM that performs specific jobs. Each instance group is a part of an instance group.
+
+## <a id="instance-group"></a> Instance Group (previously known as Deployment Job)
+
+An instance group is a collection of instances tasked to perform same jobs. Each instance group has an associated VM type, persistent disk type, a stemcell and a set of jobs. Instance groups are configured in the manifest.
+
+## <a id="job"></a> Job (aka Release Job)
+
+A job is part of a release. It contains startup, shutdown scripts, and configuration files that tell the Agent how to start, run and monitor software on a VM. Jobs can depend on packages for necessary software.
 
 ## <a id="jumpbox"></a> Jump box
 
@@ -86,9 +106,21 @@ A VM that acts as a single access point for the Director and deployed VMs. For r
 
 A YAML file that identifies one or more release, one or more stemcells and specifies how to configure them for a given deployment.
 
+## <a id="orphaned-disk"></a> Orphaned (Persistent) Disk
+
+An orphaned disk is a persistent disk that will be garbage collected after a few days unless it's reattached to an instance.
+
+## <a id="package"></a> Package
+
+A package is part of a release. It contains vendored in sofware source and scripts to compile it. Packages can depend on other packages.
+
+## <a id="persistent-disk"></a> Persistent Disk
+
+A persistent disk is a disk created in the cloud and associated with a specific instance. While instance's associated VM is recreated, same persistent disk will be reattached. [See usage details](persistent-disks.html).
+
 ## <a id="release"></a> Release
 
-A collection of configuration files, job definitions, source code, package definitions and accompanying information needed to make a software component deployable by BOSH. A self-contained release should have no dependencies that need to be fetched from the internet.
+A collection of configuration files, source code, jobs, packages and accompanying information needed to make a software component deployable by BOSH. A self-contained release should have no dependencies that need to be fetched from the internet.
 
 ## <a id="resource-pool"></a> Resource Pool
 
@@ -96,8 +128,12 @@ Resource pool is collections of VMs created from the same stemcell, with the sam
 
 ## <a id="runtime-config"></a> Runtime Config
 
-The runtime config is a YAML file that defines global configuration used by the Director and all deployments. It allows to specify addons.
+The runtime config is a YAML file that defines global configuration used by the Director and all deployments. It allows to specify addons. [See usage details](runtime-config.html).
 
 ## <a id="stemcell"></a> Stemcell
 
 A generic VM image that BOSH clones and configures to during deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products.
+
+## <a id="vm-type"></a> VM Type
+
+VM type is a named Virtual Machine size configuration in the cloud config. [See usage details](cloud-config.html#vm-types).
