--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,7 +2,7 @@
 title: Index
 ---
 
-<p class="note">See <a href="recent.html">Recent Additions and Updates</a>.</p>
+See [Recent Additions and Updates](recent.html).
 
 ## <a id="intro"></a> Introduction
 
