--- a/job-lifecycle.html.md.erb
+++ b/job-lifecycle.html.md.erb
@@ -2,17 +2,19 @@
 title: Job Lifecycle
 ---
 
-There are several stages that each release job goes through during a deployment process:
+There are several stages that each job goes through during a deployment process:
 
 1. release job and its dependent packages are downloaded and placed on a machine
-1. [pre-start scripts](pre-start.html) run for all release jobs
+1. [pre-start scripts](pre-start.html) run for all jobs on the VM in parallel
 	- (waits for all pre-start scripts to finish)
 1. `monit start` is called for each process
-1. [post-start scripts](post-start.html) run for all release jobs
+1. [post-start scripts](post-start.html) run for all jobs on the VM in parallel
 	- (waits for all post-start scripts to finish)
+1. [post-deploy scripts](post-deploy.html) run for all jobs on *all* VMs in parallel
+	- (waits for all post-deploy scripts to finish)
 1. monit will automatically restart processes that exited
 1. `monit unmonitor` is called for each process
-1. [drain scripts](drain.html) run for all release jobs
+1. [drain scripts](drain.html) run for all jobs on the VM
 	- (waits for all drain scripts to finish)
 1. `monit stop` is called for each process
 
