--- a/post-start.html.md.erb
+++ b/post-start.html.md.erb
@@ -34,7 +34,7 @@ Post-start script should be idempotent. It may be called multiple times after pr
 
 Unlike a drain script, a post-start script uses an exit code to indicate its success (exit code 0) or failure (any other exit code).
 
-Post-start script is called every time before job is started via monit, which means that post-start script should perform its operations in an idempotent way.
+Post-start script is called every time after job is started via monit, which means that post-start script should perform its operations in an idempotent way.
 
 <p class="note">Note: Running `monit start` directly on a VM will not trigger post-start scripts.</p>
 
@@ -51,6 +51,6 @@ You can find logs for each release job's post-start script in the following loca
 Since post-start script will be called multiple times, new output will be appended to the files above. Standard [log rotation policy](job-logs.html#log-rotation) applies.
 
 ---
-Next: [Drain script](drain.html)
+Next: [Post-deploy script](post-deploy.html)
 
 Previous: [Pre-start script](pre-start.html)
